--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "gatsby": "^4.12.1",
+    "gatsby-plugin-manifest": "^4.12.1",
+    "gatsby-plugin-offline": "^5.12.1",
     "gatsby-plugin-sass": "^5.12.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
