Broke Google Sign in, Added SaveToDatabase
While implemeting code for a save to database button that saves the current match location, team name, and team scores to firestore, the google sign in pop up stopped workign (error: the requested action is invalid) and we'll have to work on fixing that

Commented out code for readFromDatabase because that'll need to be fixed; the async operation never ends

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "firebase": "^9.8.1",
     "gatsby": "^4.12.1",
     "gatsby-plugin-manifest": "^4.12.1",
     "gatsby-plugin-offline": "^5.12.1",
