--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "firebase": "^9.8.1",
     "firebase-admin": "^10.2.0",
     "gatsby": "^4.12.1",
