Added export to excel button
Using package XLSX, added logic to export the data to an excel spreadsheet
Also changed icon on upload match to be a cloud upload button

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-sass": "^5.12.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sass": "^1.50.1"
+    "sass": "^1.50.1",
+    "xlsx": "^0.18.5"
   }
 }
